--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
             </div>
         </div>
     </footer>
-
+    <button id="theme-toggle">Переключить тему</button>
     <script src="script.js"></script>
 </body>
+
 </html>
